--- a/config/config.main.json
+++ b/config/config.main.json
@@ -1,6 +1,6 @@
 {
     "APPSTATE_PATH": "./appstate.json",
-    "APPSTATE_PROTECTION": false,
+    "APPSTATE_PROTECTION": true,
     "AUTO_PING_SERVER": false,
     "ALLOW_INBOX": true,
     "DATABASE": "JSON",
